Fixed the sidebar overlapping bug

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -159,7 +159,7 @@ canvas {
 /* Header */
 #overlay {
     position: relative;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .header {
